# MenschenFigurDetektion

./: README.md  output.txt
controls/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
controls/config/: Lichtparam.yaml  Lichtparam.yaml~
controls/msg/: pose.msg
controls/src/: controller.cpp
fdetection/: CMakeLists.txt  package.xml
fdetection/launch/: hfdetect.launch  hfdetect.launch~
fdetection/src/test/: image_node_c.cpp
image_node_a/: CMakeLists.txt  package.xml
image_node_a/src/: image_node_a.cpp
image_node_b/: CMakeLists.txt  package.xml
image_node_b/src/: image_node_b.cpp
struck/: CMakeLists.txt  config.txt
struck/sequences/: README.txt
struck/src/: ImageRep.h  LaRank.h  RawFeatures.h  main.cpp
